--- a/src/tero/clouds/templates/sally-cloud-init-script.j2
+++ b/src/tero/clouds/templates/sally-cloud-init-script.j2
@@ -47,13 +47,13 @@ fi
 [ -f /usr/bin/bzip2 ] || $INSTALL_PACKAGES -y install bzip2
 [ -f /usr/bin/git ] || $INSTALL_PACKAGES -y install git-core
 [ -f /usr/bin/make ] || $INSTALL_PACKAGES -y install make
-
-VIRTUALENV_RUN="/usr/bin/python3 -m venv --system-site-packages"
+[ -f /usr/bin/rsync ] || $INSTALL_PACKAGES -y install rsync
 
 # download keys, certificates, etc.
 /usr/bin/aws s3 cp {{identities_url}} / --recursive
 
 # defaults to downloading drop so we can install the sally.xml profile.
+VIRTUALENV_RUN="/usr/bin/python3 -m venv --system-site-packages"
 if [ ! -f ${siteTop}/bin/dservices ]; then
     /usr/bin/mkdir -p ${siteTop}/reps
     $VIRTUALENV_RUN ${siteTop}
@@ -70,7 +70,9 @@ cd ${siteTop}
 ${siteTop}/bin/dservices -DetcDir=/etc -DsshPort={{ssh_port}} -DlogsLocation={{logs_storage_location}}{% if ldap_host %} -DldapHost={{ldap_host}}{% endif %}{% if company_domain %} -DcompanyDomain={{company_domain}}{% endif %} ${siteTop}/reps/drop/share/profiles/sally.xml
 
 # disable what we don't need
-/usr/bin/systemctl stop rpcbind
-/usr/bin/systemctl disable rpcbind
-/usr/bin/systemctl stop postfix.service
-/usr/bin/systemctl disable postfix.service
+if [ "$(grep "CentOS" /etc/system-release)" != "" ]; then
+    /usr/bin/systemctl stop rpcbind
+    /usr/bin/systemctl disable rpcbind
+    /usr/bin/systemctl stop postfix.service
+    /usr/bin/systemctl disable postfix.service
+fi
