--- a/src/tero/clouds/templates/app-cloud-init-script.j2
+++ b/src/tero/clouds/templates/app-cloud-init-script.j2
@@ -13,22 +13,26 @@ sysconfigFile=/var/www/djaoapp/etc/sysconfig/djagent
 {% endif %}
 
 # recreates links for TLS certificates
-for domain in `ls /etc/pki/tls/certs/archive` ; do
-  chmod 600 /etc/pki/tls/certs/archive/$domain/privkey.pem
-  mkdir -p /etc/pki/tls/certs/live/$domain
-  pushd /etc/pki/tls/certs/live/$domain
-  [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey.pem
-  [ -e fullchain.pem ] || ln -s ../../archive/$domain/fullchain.pem
-done
-for domain in `ls /etc/letsencrypt/archive` ; do
-  chmod 600 /etc/letsencrypt/archive/$domain/privkey.pem
-  mkdir -p /etc/letsencrypt/live/$domain
-  pushd /etc/letsencrypt/live/$domain
-  [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey1.pem privkey.pem
-  [ -e fullchain.pem ] || ln -s ../../archive/$domain/fullchain1.pem fullchain.pem
-  [ -e cert.pem ] || ln -s ../../archive/$domain/cert1.pem cert.pem
-  [ -e chain.pem ] || ln -s ../../archive/$domain/chain1.pem chain.pem
-done
+if [ -d /etc/pki/tls/certs/archive ]; then
+  for domain in `ls /etc/pki/tls/certs/archive` ; do
+    chmod 600 /etc/pki/tls/certs/archive/$domain/privkey.pem
+    mkdir -p /etc/pki/tls/certs/live/$domain
+    pushd /etc/pki/tls/certs/live/$domain
+    [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey.pem
+    [ -e fullchain.pem ] || ln -s ../../archive/$domain/fullchain.pem
+  done
+fi
+if [ -d /etc/letsencrypt/archive ]; then
+  for domain in `ls /etc/letsencrypt/archive` ; do
+    chmod 600 /etc/letsencrypt/archive/$domain/privkey.pem
+    mkdir -p /etc/letsencrypt/live/$domain
+    pushd /etc/letsencrypt/live/$domain
+    [ -e privkey.pem ] || ln -s ../../archive/$domain/privkey1.pem privkey.pem
+    [ -e fullchain.pem ] || ln -s ../../archive/$domain/fullchain1.pem fullchain.pem
+    [ -e cert.pem ] || ln -s ../../archive/$domain/cert1.pem cert.pem
+    [ -e chain.pem ] || ln -s ../../archive/$domain/chain1.pem chain.pem
+  done
+fi
 
 # Configures the agent
 echo "QUEUE_URL={{queue_url}}" > ${sysconfigFile}
